kubernetes/xrchat-server/base/xrchat-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xrengine
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xrengine-mariadb
  namespace: xrengine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xrengine-mariadb
  template:
    metadata:
      labels:
        app: xrengine-mariadb
    spec:
      hostname: xrengine-mariadb
      containers:
        - name: mariadb
          image: mariadb:10.5.2
          ports:
            - containerPort: 3306
          volumeMounts:
#            - mountPath: /docker-entrypoint-initdb.d
#              name: mariadb-initdb
            - mountPath: /var/lib/mysql
              name: xrengine-mariadb-persistent-storage
      volumes:
        - name: xrengine-mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: mariadb-pv-claim
#        - name: mysql-initdb
#          configMap:
#            name: mariadb-initdb
#---
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: mariadb-initdb
#data:
#  initdb.sql: |-
#    CREATE USER 'first_user'@'%' IDENTIFIED BY '111' ;
#    CREATE USER 'second_user'@'%' IDENTIFIED BY '222' ;
---
apiVersion: v1
kind: Service
metadata:
  name: xrengine-mariadb
  namespace: xrengine
spec:
  selector:
    app: xrengine-mariadb
  ports:
    - name: xrengine-mariadb
      protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xrengine
  namespace: xrengine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xrengine
  template:
    metadata:
      labels:
        app: xrengine
    spec:
      serviceAccountName: xrengine
      containers:
        - name: xrengine
          image: xrengine/xrengine:v0.0.0
          ports:
            - containerPort: 3030
          imagePullPolicy: IfNotPresent
#      dnsPolicy: Default
#      volumes:
#        - name: xrengine-dev-config
#          secret:
#            secretName: xrengine-dev-config
---
apiVersion: v1
kind: Service
metadata:
  name: xrengine
  namespace: xrengine
spec:
  selector:
    app: xrengine
  ports:
    - name: xrengine
      protocol: TCP
      port: 3030
      targetPort: 3030
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xrengine-ingress-master
  namespace: xrengine
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
spec:
  tls:
    - hosts:
        - api.dev.xrengine.io
      secretName: xrengine-secret
  rules:
    - host: api.dev.xrengine.io
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xrengine-ingress-main-minion
  namespace: xrengine
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
    - host: api.dev.xrengine.io
      http:
        paths:
          - backend:
              serviceName: xrengine
              servicePort: 3030
            path: /
